[package]
name = "w25q"
version = "0.3.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>", "David O'Connor <the_alchemist@fastmail.com>", "Diego Frenoux <diego@churrosoft.ar>", "Elisha Hastings <eli@seagen.io>"]
edition = "2018"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory/"
repository = "https://github.com/Churrosoft/spi-memory"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'w25q = "[a-z0-9\\.-]+"'
replace = 'w25q = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/w25q/[a-z0-9\\.-]+"
replace = "https://docs.rs/w25q/{{version}}"

[dependencies]
embedded-hal = "1.0.0"
log = { version = "0.4.6", optional = true }
bitflags = "2.6.0"

[dev-dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
stm32f4xx-hal = { version = "0.22.0", features = ["stm32f411"] }
panic-semihosting = "0.6.0"

[profile.dev]
opt-level = "z"
panic = "abort"
